Small updates to LPA send notices to interested parties

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,7 +2,7 @@
 
 {% set back = false %}
 {% set nav = false %}
-{% set title = 'All prototypes' %}
+{% set title = 'Appeal service prototypes' %}
 
 {% block content %}
 <div class="govuk-grid-row">
@@ -68,7 +68,7 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/manage/emails/">Emails to the LPA</a>
+          <a href="/manage/emails/">Communication with the LPA</a>
         </li>
         <li>
           <a href="manage/access/">Service start page</a>
@@ -182,14 +182,12 @@
       Prototype archive
     </h2>
 
-    <p>Previous prototypes are on a different railway app.</p>
-
-    <p>Some of the version numbers on here do not start at 1, this means the work was started on an older version of the prototype and you can see previous work there.</p>
-
-    <p>
-      <a href="https://appealz.up.railway.app/">
-        View the archive</a> (username is tim, password is password)</p>
-
+    <p class="govuk-body">
+      The previous prototype is hosted in another place as it uses a differemt version of the prototype kit.
+    </p>
+    <p class="govuk-body">
+      <a href="https://appealz.up.railway.app/">View the archive</a> (username is tim, password is password)
+    </p>
 
   </div>
 </div>
