--- a/app/views/interested/find-appeal/v6/closed-appeals.html
+++ b/app/views/interested/find-appeal/v6/closed-appeals.html
@@ -45,16 +45,15 @@
     head: [
 
       {
+        text: "Appeal site",
+        classes: 'govuk-!-width-one-thirds'
+      },
+      {
         text: "Appeal reference",
         format: 'numeric'
       },
       {
-        text: "Appeal site",
-        classes: 'govuk-!-width-one-half'
-      },
-      {
         text: "Decision date",
-        classes: 'govuk-!-width-one-quarter',
         format: 'numeric'
       },
       {
@@ -64,11 +63,11 @@
     rows: [
       [
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166002&site-address=102%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Mel%20Pickins">0166002</a>',
-          format: 'numeric'
+          text: "102 Aubrey Road, BS3 3EX"
         },
         {
-          text: "102 Aubrey Road, BS3 3EX"
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166002&site-address=102%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Mel%20Pickins">0166002</a>',
+          format: 'numeric'
         },
         {
           text:  '20' | daysInPastShort,
@@ -80,11 +79,11 @@
       ],
       [
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0141289&site-address=77%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Nic%20Soonez">0141289</a>',
-          format: 'numeric'
+          text: "77 Aubrey Road, BS3 3EX"
         },
         {
-          text: "77 Aubrey Road, BS3 3EX"
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0141289&site-address=77%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Nic%20Soonez">0141289</a>',
+          format: 'numeric'
         },
         {
           text:  '21' | daysInPastShort,
@@ -96,11 +95,11 @@
       ],
       [
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165971&site-address=19%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Talisan%20Creedance">0165971</a>',
-          format: 'numeric'
+          text: "19 Aubrey Road, BS3 3EX"
         },
         {
-          text: "19 Aubrey Road, BS3 3EX"
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165971&site-address=19%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Talisan%20Creedance">0165971</a>',
+          format: 'numeric'
         },
         {
           text:  '34' | daysInPastShort,
@@ -112,11 +111,11 @@
       ],
       [
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165791&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone">0165791</a>',
-          format: 'numeric'
+          text: "2 Aubrey House, Aubrey Road, BS3 3EX"
         },
         {
-          text: "2 Aubrey House, Aubrey Road, BS3 3EX"
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165791&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone">0165791</a>',
+          format: 'numeric'
         },
         {
           text:  '40' | daysInPastShort,
@@ -129,11 +128,11 @@
 
       [
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166241&site-address=1%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Jan%20Fish">0166241</a>',
-          format: 'numeric'
+          text: "1 Aubrey House, Aubrey Road, BS3 3EX"
         },
         {
-          text: "1 Aubrey House, Aubrey Road, BS3 3EX"
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166241&site-address=1%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Jan%20Fish">0166241</a>',
+          format: 'numeric'
         },
         {
           text:  '40' | daysInPastShort,
@@ -145,11 +144,11 @@
       ],
       [
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166111&site-address=22%20Aubrey%20Road%2C%20BS3%203EX&appellantName=P.%20J.%20Thames">0166111</a>',
-          format: 'numeric'
+          text: "22 Aubrey Road, BS3 3EX"
         },
         {
-          text: "22 Aubrey Road, BS3 3EX"
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166111&site-address=22%20Aubrey%20Road%2C%20BS3%203EX&appellantName=P.%20J.%20Thames">0166111</a>',
+          format: 'numeric'
         },
         {
           text:  '42' | daysInPastShort,
@@ -161,11 +160,11 @@
       ],
       [
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166102&site-address=155%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Danny%20Fiakkas">0166102</a>',
-          format: 'numeric'
+          text: "155 Aubrey Road, BS3 3EX"
         },
         {
-          text: "155 Aubrey Road, BS3 3EX"
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166102&site-address=155%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Danny%20Fiakkas">0166102</a>',
+          format: 'numeric'
         },
         {
           text:  '46' | daysInPastShort,
@@ -177,11 +176,11 @@
       ],
       [
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165854&site-address=32%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Pavarthi%20Sagar">0165854</a>',
-          format: 'numeric'
+          text: "32 Vicarage Court, Aubrey Road, BS3 3EX"
         },
         {
-          text: "32 Vicarage Court, Aubrey Road, BS3 3EX"
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165854&site-address=32%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Pavarthi%20Sagar">0165854</a>',
+          format: 'numeric'
         },
         {
           text:  '46' | daysInPastShort,
@@ -193,11 +192,11 @@
       ],
       [
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165921&site-address=8%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Ash%20Davenant">0165921</a>',
-          format: 'numeric'
+          text: "8 Aubrey Road, BS3 3EX"
         },
         {
-          text: "8 Aubrey Road, BS3 3EX"
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165921&site-address=8%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Ash%20Davenant">0165921</a>',
+          format: 'numeric'
         },
         {
           text:  '72' | daysInPastShort,
@@ -209,11 +208,11 @@
       ],
       [
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166013&site-address=1%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Charlie%20Agadosi">0166013</a>',
-          format: 'numeric'
+          text: "1 Vicarage Court, Aubrey Road, BS3 3EX"
         },
         {
-          text: "1 Vicarage Court, Aubrey Road, BS3 3EX"
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166013&site-address=1%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Charlie%20Agadosi">0166013</a>',
+          format: 'numeric'
         },
         {
           text:  '78' | daysInPastShort,
