--- a/app/views/interested/index.html
+++ b/app/views/interested/index.html
@@ -43,6 +43,7 @@
       <li>content updates</li>
       <li>only using tabs when there is a decision</li>
       <li>changed some language ‘Comments’ > ‘Comment’ for the find journey</li>
+      <li>small updates to presentation for open/current appeals</li>
     </ul>
 
     {{ govukButton({
