--- a/app/views/manage/notify/v1/send-new.html
+++ b/app/views/manage/notify/v1/send-new.html
@@ -47,7 +47,7 @@
             {
               html: 'Print a notice',
               value: 'print'
-            }
+            } if data['addresses'] != true
           ]
         }) }}
 
