--- a/app/views/manage/notify/v1/check-list.html
+++ b/app/views/manage/notify/v1/check-list.html
@@ -120,7 +120,7 @@
   {% endif %}
 
   <p class="govuk-body govuk-!-margin-bottom-6">
-    <a href="postcode-search">
+    <a href="send-new?addresses=1">
       Add more addresses to the list
     </a>
   </p>
