Interested parties can comment v8, linked name data

--- a/app/views/_includes/appeal-content/full-appeal-meta.html
+++ b/app/views/_includes/appeal-content/full-appeal-meta.html
@@ -21,7 +21,7 @@
         text: 'Appeal reference'
       },
       value: {
-        text: '0166321'
+        text: data['appealCode'] or '122741'
       }
     },
     {
