--- a/app/views/interested/comment/v8/check-your-answers.html
+++ b/app/views/interested/comment/v8/check-your-answers.html
@@ -34,7 +34,7 @@
                 text: 'Your name'
               },
               value: {
-                html: data['fullName'] or 'Sam Jones'
+                html: data['interested-first-name'] + ' ' + data['interested-last-name']
               },
               actions: {
                 items: [
