--- a/app/views/interested/comment/v8/confirmation.html
+++ b/app/views/interested/comment/v8/confirmation.html
@@ -24,7 +24,7 @@
           {{ title }}
         </h1>
         <div class="govuk-panel__body">
-          Appeal reference <br><strong>012726</strong>
+          Appeal reference <br><strong>{{ data['appealCode'] or '122741' }}</strong>
         </div>
       </div>
 
