--- a/app/views/interested/find-appeal/v8/appeal-search-number.html
+++ b/app/views/interested/find-appeal/v8/appeal-search-number.html
@@ -25,7 +25,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-      <form action="appeal-details?status=open" method="post">
+      <form method="post">
 
         <div class="govuk-form-group">
 
