--- a/app/views/patterns/index.html
+++ b/app/views/patterns/index.html
@@ -36,6 +36,8 @@
     <ul class="govuk-list govuk-list--bullet">
       <!-- <li><a href="file-upload/file-upload">service headers</a></li>
       <li><a href="file-upload/file-upload">H1 scale</a></li> -->
+      <li><a href="input/name">name input</a></li>
+      <li><a href="input/address">address input</a></li>
       <li><a href="file-upload/file-upload">file upload</a></li>
       <li><a href="file-upload/documents-check">check for file upload</a></li>
     </ul>
