Small update to upload example

--- a/app/views/patterns/file-upload/file-upload.html
+++ b/app/views/patterns/file-upload/file-upload.html
@@ -27,6 +27,10 @@
     </p>
 
     <p class="govuk-body">
+      We have been using a component based on the <a href="https://design-patterns.service.justice.gov.uk/components/multi-file-upload/" class="govuk-link">MOJ multi-file upload component</a>.
+    </p>
+
+    <p class="govuk-body">
       <a href="https://github.com/Planning-Inspectorate/appeals-prototype/tree/main/app/views/patterns/code/file-upload" class="govuk-link">
         View the code on GitHub
       </a>
