--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -42,7 +42,7 @@
 
       {{ govukButton({
         html: 'View prototype',
-        href: 'v'+version+'/',
+        href: 'v'+version+'/?action=',
         isStartButton: true
       }) }}
 
