--- a/app/views/_includes/appeal-content/lpa-full-appeal-meta.html
+++ b/app/views/_includes/appeal-content/lpa-full-appeal-meta.html
@@ -24,10 +24,10 @@
   </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      Appeal reference
+      Appeal site
     </dt>
     <dd class="govuk-summary-list__value">
-      1345264
+      11 Capford Road, Bradlington, Oxford OX22 3PD
     </dd>
   </div>
   <div class="govuk-summary-list__row">
