--- a/app/views/manage/notify/v1/postcode-search.html
+++ b/app/views/manage/notify/v1/postcode-search.html
@@ -6,15 +6,20 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
 
+  <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">
       {{ title }}
     </h1>
+  </div>
 
+  <div class="govuk-grid-column-full">
+    {% include "_includes/appeal-content/lpa-full-appeal-meta.html" %}
   </div>
 
   <div class="govuk-grid-column-two-thirds">
+
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
     <form method="post" action="">
 
