--- a/app/views/manage/notify/v1/send-email.html
+++ b/app/views/manage/notify/v1/send-email.html
@@ -14,7 +14,13 @@
 
   </div>
 
+  <div class="govuk-grid-column-full">
+    {% include "_includes/appeal-content/lpa-full-appeal-meta.html" %}
+  </div>
+
   <div class="govuk-grid-column-two-thirds">
+
+    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
     <form method="post" action="">
 
