IP notice preview and print styles test

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -4,6 +4,7 @@
 @import "components/upload";
 
 @import "pins/pins_tables";
+@import "pins/pins_print-styles";
 
 // Top border for headers to draw attention to areas
 .app-border-top-big {
