--- a/app/views/manage/appeals/v3/index.html
+++ b/app/views/manage/appeals/v3/index.html
@@ -131,8 +131,7 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/notify/v1/send-new?from=appeals">Notify interested parties</a>
-              <br><a href="/manage/questionnaire/v11/task-list"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/questionnaire/v11/task-list"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ] if data['questionnaire'] != 'complete',
@@ -170,8 +169,7 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/notify/v1/send-new?from=appeals">Notify interested parties</a>
-              <br><a href="/manage/questionnaire/v11/task-list"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/questionnaire/v11/task-list"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ],
@@ -190,8 +188,7 @@
               format: 'numeric'
             },
             {
-              html: '<a href="/manage/notify/v1/send-new?from=appeals">Notify interested parties</a>
-              <br><a href="/manage/questionnaire/v11/task-list"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
+              html: '<a href="/manage/questionnaire/v11/task-list"><span class="govuk-visually-hidden">Submit </span>Questionnaire</a>',
               format: 'numeric'
             }
           ],
