--- a/app/views/manage/appeals/v3/index.html
+++ b/app/views/manage/appeals/v3/index.html
@@ -118,7 +118,7 @@
         rows: [
           [
             {
-              html: '<a href="appeal-details">1345264</a>'
+              html: '<a href="appeal-details?appealCode=1345264&deadline=3">1345264</a>'
             },
             {
               html: '21/04125/FUL'
@@ -137,7 +137,7 @@
           ] if data['questionnaire'] != 'complete',
           [
             {
-              html: '<a href="appeal-details">1345127</a>'
+              html: '<a href="appeal-details?appealCode=1345127&deadline=4">1345127</a>'
             },
             {
               html: '22/03021/FUL'
@@ -156,7 +156,7 @@
           ] if data['finalcomments'] != 'complete',
           [
             {
-              html: '<a href="appeal-details">1345260</a>'
+              html: '<a href="appeal-details?appealCode=1345260&deadline=6">1345260</a>'
             },
             {
               html: '21/02939/FUL'
@@ -175,7 +175,7 @@
           ],
           [
             {
-              html: '<a href="appeal-details">1345172</a>'
+              html: '<a href="appeal-details?appealCode=1345172&deadline=7">1345172</a>'
             },
             {
               html: '21/04125/FUL'
@@ -194,7 +194,7 @@
           ],
           [
             {
-              html: '<a href="appeal-details">1345222</a>'
+              html: '<a href="appeal-details?appealCode=1345222&deadline=27">1345222</a>'
             },
             {
               html: '21/05057/FUL'
@@ -213,7 +213,7 @@
           ]  if data['statement'] != 'complete',
           [
             {
-              html: '<a href="appeal-details">1345331</a>'
+              html: '<a href="appeal-details?appealCode=1345331&deadline=31">1345331</a>'
             },
             {
               html: '22/04782/FUL'
