--- a/app/views/manage/notify/v1/check-list.html
+++ b/app/views/manage/notify/v1/check-list.html
@@ -85,24 +85,18 @@
 
     <dl class="govuk-summary-list">
       <div class="govuk-summary-list__row">
-        <!-- <dt class="govuk-summary-list__key">
-          Name
-        </dt> -->
         <dd class="govuk-summary-list__value">
           22 Cheers Drive, Speedwell, Bristol BS5 7FQ
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">
-            Change<span class="govuk-visually-hidden"> name</span>
+            Remove<span class="govuk-visually-hidden"> 22 Cheers Drive, Speedwell, Bristol BS5 7FQ</span>
           </a>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <!-- <dt class="govuk-summary-list__key">
-          Date of birth
-        </dt> -->
         <dd class="govuk-summary-list__value">
-          23 Cheers Drive, Speedwell, Bristol BS5 7FQ
+          Remove<span class="govuk-visually-hidden"> 23 Cheers Drive, Speedwell, Bristol BS5 7FQ</span>
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">
@@ -112,15 +106,12 @@
       </div>
 
       <div class="govuk-summary-list__row pins-summary-list__row--last">
-        <!-- <dt class="govuk-summary-list__key">
-          Address
-        </dt> -->
         <dd class="govuk-summary-list__value">
           24 Cheers Drive, Speedwell, Bristol BS5 7FQ
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">
-            Change<span class="govuk-visually-hidden"> address</span>
+            Remove<span class="govuk-visually-hidden"> 24 Cheers Drive, Speedwell, Bristol BS5 7FQ</span>
           </a>
         </dd>
       </div>
