--- a/app/views/_includes/appeal-content/lpa-full-appeal-meta.html
+++ b/app/views/_includes/appeal-content/lpa-full-appeal-meta.html
@@ -27,7 +27,7 @@
       Appeal site
     </dt>
     <dd class="govuk-summary-list__value">
-      11 Capford Road, Bradlington, Oxford OX22 3PD
+      21 Cheers Drive, Speedwell, Bristol BS5 7FQ
     </dd>
   </div>
   <div class="govuk-summary-list__row">
