--- a/app/views/manage/appeals/v3/appeal-notice.html
+++ b/app/views/manage/appeals/v3/appeal-notice.html
@@ -21,8 +21,10 @@
       {{ title }}
     </h1>
 
-    {% include "_includes/appeal-content/lpa-full-appeal-meta.html" %}
+  </div>
+  <div class="govuk-grid-column-full">
 
+    {% include "_includes/appeal-content/lpa-appeal-notice-meta.html" %}
     <section>
       <!-- <p class="govuk-body">
         <img src="{{ asset_path }}images/pi-logo.png" width="150"/>
@@ -30,19 +32,16 @@
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
+  </div>
+  <div class="govuk-grid-column-two-thirds">
+
     <section class="govuk-!-margin-bottom-9">
-      <p class="govuk-body">
+      <!-- <p class="govuk-body">
         Dear householder,
-      </p>
+      </p> -->
 
       <p class="govuk-body">
         Rachel Silver is appealing Bristol City Council’s decision to refuse their planning application.
-      </p>
-
-      <p class="govuk-body">
-        Planning application number: {{ applicationRef }}
-        <br>Proposal: Loft dormer conversion (flat and pitched roof)
-        <br>Appeal start date: {{ 7 | daysInFuture }}
       </p>
 
       <p class="govuk-body">
@@ -78,12 +77,12 @@
       </h2>
 
       <p class="govuk-body">
-        Follow the link to view and comment on this appeal.
+        Go to the website below and search for 1345264 to view and comment on this appeal.
       </p>
 
       <p class="govuk-body">
         <a href="appeal-details?status=open&appeal=1&appealCode={{ appealref }}" class="govuk-link">
-          https://appeals.planninginspectorate.gov.uk/appeals/{{ appealref }}?sc=935336894d43c80fa548fc4a01af3488
+          https://comment-on-planning-appeals.service.gov.uk/
         </a>
       </p>
 
@@ -101,8 +100,16 @@
 
       <p class="govuk-body">
         The Planning Inspectorate<br>
-        enquiries@planninginspectorate.gov.uk
+        <!-- enquiries@planninginspectorate.gov.uk -->
       </p>
+
+      <!-- <h2 class="govuk-heading-m">
+        Find more information
+      </h2>
+
+      <p class="govuk-body">
+        The inspector will review all the evidence and make their decision. We will publish the decision on our website.
+      </p> -->
 
     </section>
 
@@ -111,7 +118,7 @@
     <button class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="window.print()">
       Print this notice
     </button>
-    
+
   </div>
 </div>
 
